--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- 
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "tailwind:init": "tailwindcss init -p"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tailwind:init": "tailwindcss init -p"
+  },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
