--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
