--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node.js"
@@ -14,11 +15,15 @@
   "author": "gungun rathore",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2"
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.11",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
